# MagicMinds-API

./: .env.example  .gitignore  API_SCHEMAS_REFERENCE.md  API_TESTING_GUIDE.md  API_UPDATES_REFERENCE.md  AUTHENTICATION_FLOW.md  AUTH_TOKEN_GUIDE.md  DATABASE_SETUP_GUIDE.md  Dockerfile  EDGE_FUNCTION_MIGRATION.md  FIX_500_ERROR.md  LOCAL_TESTING_GUIDE.md  README.md  auth_token.txt  docker-compose.yml  get_token.py  init_db.py  push_to_github.sh  pyproject.toml  quick_test.py  run_migrations.py  test_api.py
app/: config.py  main.py
app/models/: __init__.py  child_profile.py  friend.py  game_room.py  game_session.py  generated_story.py  join_request.py  parent_profile.py  voice_subscription.py
app/routers/: billing.py  friends.py  health.py  profiles.py  rooms.py  sessions.py  stories.py  voice.py
app/schemas/: __init__.py  friend.py  profile.py  room.py  session.py  story.py
functions/manage-friends/: index.ts
functions/manage-game-rooms/: index.ts
migrations/: 20251102000000_add_selected_category_to_game_rooms.sql
